--- a/app/views/products/_form.html.haml
+++ b/app/views/products/_form.html.haml
@@ -15,5 +15,8 @@
   .field
     = f.label :price
     = f.number_field :price
+  .field
+    = f.label :image
+    = f.file_field :image
   .actions
     = f.submit 'Save'
