--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -13,6 +13,7 @@
         %td= product.name
         %td= product.description
         %td= product.price
+        %td= image_tag(product.image_url.to_s)
 %br
 
 = link_to 'New Product', new_product_path
