--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,7 +1,32 @@
-.notice= notice
-- if user_signed_in?
-  = link_to('Edit registration', edit_user_registration_path)
-  = link_to('Logout', destroy_user_session_path, :method => :delete)
-- else
-  = link_to('Register', new_user_registration_path)
-  = link_to('Login', new_user_session_path)
+#home-index
+  %nav.navbar.navbar-light.navbar-top.navbar-fixed-top.bg-light
+    .container-fluid
+      .container
+        .navbar-header
+          .navbar-brand
+            = fa_icon "facebook-square"
+          .navbar-brand
+            = fa_icon "twitter-square"
+        #brand-shop
+          = show_svg("Logo2.svg")
+        %ul.nav.navbar-nav.navbar-right
+          - if user_signed_in?
+            %li= link_to('Logout', destroy_user_session_path, :method => :delete)
+          - else
+            %li= link_to('Login', new_user_session_path)
+
+  .container
+    - if notice
+      .alert.alert-danger
+      = notice
+
+    #body-index
+      .row
+        #description.col-md-6
+          %h1= 'Ração Gourmet'
+          %p= 'Alimentar um roedor não é muito difícil, sabia? Basta escolher a ração de chinchila ideal para seu peludinho e complementar a alimentação com feno. Isso porque uma dieta básica dessa espécie pode ser dividida entre comidinhas diferentes para que o pet não enjoe.'
+          = link_to 'Confira nossos Produtos!', products_path, class: "btn btn-primary"
+        #imagem.col-md-6
+          .pull-right
+            = show_svg("chinchilla.svg")
+
