--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,14 @@
-// Place all the styles related to the users controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+#user-login{    
+    margin-top: 3em;
+
+    h1{
+        margin: 0 0 10px 10px;
+        font-size: 40px;
+        line-height: 46px;
+    }
+
+    #produtos{
+        margin: 0 0 3em 10px;
+        font-size: 18px;
+    }
+}
