--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -1,5 +1,4 @@
-%h1 New Product
-
-= render 'form'
-
-= link_to 'Back', products_path
+#new-product
+    .container
+    = render 'layouts/nav/nav_user'
+    = render 'form'
