--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,5 +26,11 @@
     color:black;
     background-color: #f2f2f2;
  }
+
+ h1{
+    font-size: 30px;
+    font-weight: bold;
+    line-height: 46px;
+ }
  
 
