--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -1,3 +1,38 @@
-// Place all the styles related to the Products controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+#new-product{
+    #form-new-product{
+        margin-top: 2em;
+
+        h1{
+            margin-bottom: 1em;
+        }
+
+        label, h1{
+            color:white;
+        }
+
+        #form-product{
+            border-radius: 2em;
+            margin: 0 auto;
+            padding: 5px 4em 4em 4em;
+        }
+
+        #save-new-product input{
+            margin-top: 1em;
+            height: 3em;
+            border-radius: 1em;
+        }
+
+        #save-new-product input, #form-product{
+            background-color: #9DC2FF;
+            border-color: transparent;
+            width: 55%;
+        }
+
+        #save-new-product input:hover{
+            color: #4267B2;
+            cursor: pointer;
+            border-color: #4267B2;
+            font-weight: bold;
+        }
+    }
+}
