--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,5 +1,4 @@
-%h1 New user
-
-= render 'form'
-
-= link_to 'Back', users_path
+#new-user
+    .container
+        = render 'layouts/nav/nav_user'
+        = render 'form'
