--- a/app/views/layouts/nav/_nav_user.html.haml
+++ b/app/views/layouts/nav/_nav_user.html.haml
@@ -6,6 +6,9 @@
           .navbar-brand
             = show_svg("Logo2.svg")
         %ul.nav.navbar-nav.navbar-right
+          - if current_user.has_role?(:admin)
+            %li= link_to('Novo Usuário', new_user_path)
+          %li= link_to('Novo Produto', new_product_path)
           - if user_signed_in?
             %li= link_to('Logout', destroy_user_session_path, :method => :delete)
           - else
