--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -18,6 +18,6 @@
               %td= product.name
               %td.text-right
                 %span#edit
-                  =link_to(fa_icon('pencil'), new_product_path)
+                  =link_to(fa_icon('pencil'), edit_product_path(product.id))
                 %span#remove.text-danger
-                  =link_to(fa_icon('trash'), new_product_path)
+                  =link_to(fa_icon('trash'), product_path(product.id), method: :delete, data: { confirm: 'Tem certeza que deseja deletar isto?' })
