--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,14 +1,23 @@
-%h1 Listing users
+.container
+  = render 'layouts/nav/nav_user'
+  %h1.text-center Lista de Usuários
 
-%table
-  %thead
-    %tr
-      %th Name
+  #entity-listing
+    %table.table.table-hover
+      %thead
+        %tr
+          %th ID
+          %th Name
+          %th.text-right Ações
 
-  %tbody
-    - @users.each do |user|
-      %tr
-        %td= user.name
-%br
-
-= link_to 'New User', new_user_path
+      %tbody
+        - @users.each do |user|
+          #row_user
+            %tr
+              %th= user.id
+              %td= user.name
+              %td.text-right
+                %span#edit
+                  =link_to(fa_icon('pencil'), edit_user_path(user.id))
+                %span#remove.text-danger
+                  =link_to(fa_icon('trash'), user_path(user.id), method: :delete, data: { confirm: 'Tem certeza que deseja deletar isto?' })
