adicionar layout a tela de listagem de produtos

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -25,7 +25,7 @@
         #description.col-md-6
           %h1= 'Ração Gourmet'
           %p= 'Alimentar um roedor não é muito difícil, sabia? Basta escolher a ração de chinchila ideal para seu peludinho e complementar a alimentação com feno. Isso porque uma dieta básica dessa espécie pode ser dividida entre comidinhas diferentes para que o pet não enjoe.'
-          = link_to 'Confira nossos Produtos!', products_path, class: "btn btn-primary"
+          = link_to 'Confira nossos Produtos!', product_listing_products_path, class: "btn btn-primary"
         #imagem.col-md-6
           .pull-right
             = show_svg("chinchilla.svg")
